# autoware-auto-shuttlebus

./: .gitignore  README.md  penn.shuttlebus.repos
shuttlebus_launch/: CMakeLists.txt  README.md  package.xml
shuttlebus_launch/config/: dbw_params.yaml  lanelet2_map_provider.param.yaml  lidarslam.yaml  map_publisher.param.yaml  ndt_localizer.param.yaml  ndt_mapper.param.yaml  ouster_config.yaml  ouster_filter_transformer.param.yaml  scan_downsampler.param.yaml
shuttlebus_launch/data/: Pennovation.yaml  README.md
shuttlebus_launch/design/: shuttlebus_launch-design.md
shuttlebus_launch/launch/: bootcamp_launch.launch.py  localization.launch.py  planning.launch.py
shuttlebus_launch/rviz/: lidarslam.rviz  localization.rviz
shuttlebus_launch/urdf/: lincoln_mkz_17.urdf
